[package]
name = "python_kyber"
version = "0.1.0"
authors = ["Julius Hermelink <julius.hermelink@unibw.de>"]
edition = "2018"

[lib]
name = "python_kyber"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "*"

[features]
kyber1024 = []
kyber768 = []
kyber512 = []
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
ndarray = "0.13.1"
rand = "0.7.3"
libc = "0.2.77"
itertools = "0.10.0"
